--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
     <head>
         <title>Hello</title>
-        <!--<base href="/">-->
+        <base href="/">
         <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     </head>
     <body>
