--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html ng-app="app">
+    <!-- THIS IS INDEX.HTML -->
     <head>
         <title>Hello</title>
         <base href="/">
